--- a/secrets.toml
+++ b/secrets.toml
@@ -1,2 +1,2 @@
-OPENAI_API_KEY = "${{ secrets.OPENAI_API }}"
+OPENAI_API_KEY = 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
 OPENAI_MODEL   = "gpt-4o-mini"
